fix padding on mobile nav

--- a/assets/styles/layouts/_nav.scss
+++ b/assets/styles/layouts/_nav.scss
@@ -8,6 +8,7 @@
     @include slide-link;
     @include transition(background-size color);
   }
+
   // 🍔¯\_(ツ)_/¯🍔
   .hamburger {
     width: 36px;
@@ -18,6 +19,7 @@
       transform-origin: bottom left;
     }
   }
+
   // Skew = icon on hover or when nav is active
   &:hover {
     .hambone:nth-child(1) {
@@ -27,7 +29,7 @@
 
   // Desktop styles
   @include media-md {
-    margin: grid(2) 0 0 grid(6);
+    margin: grid(2) 0 0 0;
     // "Menu" label
     .label {
       margin-left: grid(2);
@@ -44,8 +46,12 @@
   // "Menu" and "Close" text styles
   @include h4;
 
-  padding: grid(6) 0;
+  padding: grid(3) 0;
   margin: 0;
+
+  @include media-md {
+    padding: grid(6) 0;
+  }
 
   .container {
     position: relative;
@@ -257,7 +263,7 @@
       display: block;
       position: absolute;
       top: 0;
-      right: 0;
+      right: 30px;
       @include transition(all);
       &:hover {
         transform: none;
@@ -266,11 +272,19 @@
       }
     }
   }
+
+  // Second desktop breakpoint
+  @include media-nav {
+    .donate {
+      right: 0;
+    }
+  }
+
 }
 
 // Nav is stuck
 body.nav-stuck {
-  padding-top: 110px;
+  padding-top: 54px;
   .nav-main {
     position: fixed;
     top: 0;
